--- a/style.css
+++ b/style.css
@@ -174,6 +174,24 @@ nav ul li a {
     }
 }
 
+@media screen and (max-width: 421px) {
+    .slogan {
+        font-size: 24px;
+    }
+}
+
+@media screen and (max-width: 355px) {
+    .slogan {
+        font-size: 22px;
+    }
+}
+
+@media screen and (max-width: 332px) {
+    .slogan {
+        font-size: 20px;
+    }
+}
+
 
 /* ----------------------About section -------------------------------*/
 
